# airflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
ci_scripts/: prepare_airflow_docker_container.sh  update_changelog.sh
dags/dagfactory/: dagbuilder.py  dagfactory.py  utils.py
dags/models/: data_model.py
dags/operators/: db_operator.py  restart_failed_dags.py
tests/integration/postgres/: test_dag_ingestion_postgres.py
tests/integrity/: conftest.py
tests/unit/: conftest.py
tests/unit/test_dag_factory/: test_dag_builder.py  test_dag_factory.py  test_utils.py
tests/unit/test_operators/: test_db_operator.py  test_restart_failed_dags.py
tests/utils/: airflow_api_utils.py
