[project]
name = "Airflow"
version = "1.0.0"
description = """
                This repository contains a custom DAG Builder designed
                to simplify the creation of Apache Airflow DAGs using YAML configuration files.
               """
readme = "README.md"
authors = [
    {name = "Alex Ntelifilippidis", email = "a.ntelifilippidis@gmail.com.com"},
    {name = "Giorgos Papadakis", email = ""},
]
license = {text = "MIT"}
dependencies = []
constraints = "https://raw.githubusercontent.com/apache/airflow/constraints-2.10.1/constraints-3.12.txt"

[project.requires-python]
python = ">=3.12"

[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
skip = ".mypy_cache"
multi_line_output = 3

[tool.flake8]
max-line-length = 120

[tool.coverage.report]
show_missing = true
omit = ["*/__init__.py",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.coverage.xml]
output = "coverage-reports/cobertura-coverage.xml"

[tool.coverage.run]
source = ["airflow"]
branch = true
relative_files = true
omit = ["*/__init__.py",
    ".mypy_cache",
    "tests/",
    "notebooks/",
    "docs/",
    ".git"
]

[tool.pytest.ini_options]
testpaths = [
    "dags",
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
install_types = true